# ChurnLens

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
.prompts/: prompt1  prompt2  prompt3
crates/core/: Cargo.toml
crates/core/src/: cache.rs  error.rs  lib.rs  main.rs
crates/core/src/ast/: c.rs  engine.rs  mod.rs  parser.rs  rust.rs  typescript.rs
crates/core/src/git/: mod.rs
crates/core/src/metrics/: mod.rs
crates/core/tests/: integration.rs
snapshots/: site.json  snapshot_01.json  snapshot_02.json  snapshot_03.json
