[workspace]
members = ["crates/core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sergio Bonatto <bonatto@tutanota.com>"]
license = "MIT"
description = "High-performance code complexity and churn analysis engine"
repository = "https://github.com/SergioBonatto/ChurnLens"
homepage = "https://github.com/SergioBonatto/ChurnLens"
readme = "README.md"
categories = ["development-tools", "command-line-utilities"]
keywords = ["static-analysis", "git", "complexity", "metrics"]
