[workspace]
members = ["crates/core"]
resolver = "2"

[workspace.package]
version = "0.2.3"
edition = "2021"
authors = ["Sergio Bonatto <bonatto@tutanota.com>"]
license = "MIT"
description = "High-performance code complexity and churn analysis engine"
repository = "https://github.com/KirikaeLabs/UCHIKOMI.git"
homepage = "https://github.com/KirikaeLabs/UCHIKOMI.git"
readme = "README.md"
categories = ["development-tools", "command-line-utilities"]
keywords = ["static-analysis", "git", "complexity", "metrics"]
