[package]
name = "churnlens-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "churnlens"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.20"
tree-sitter-typescript = "0.20"
git2 = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.7"
anyhow = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
indexmap = "2.0"
ignore = "0.4"
bincode = "1.3"
aho-corasick = "1.1"
ctrlc = "3.4"
crossbeam-channel = "0.5"
once_cell = "1.18"

[dev-dependencies]
tempfile = "3.8"
